# face-id-preview

./: .gitignore  Makefile  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: 2d106det_int8.dlc  det_500m_int8.dlc  face_antispoof_int8.dlc  w600k_mbf_int8.dlc
app/src/main/cpp/: CMakeLists.txt  faceid_api.h  faceid_jni.cpp
app/src/main/java/com/dvr/faceid/algorithm/: IFaceIDAlgorithm.java
app/src/main/java/com/dvr/faceid/pipeline/: BufferManager.java  FramePipeline.java  PipelineConfig.java
app/src/main/java/com/dvr/faceid/ui/: PreviewActivity.java
app/src/main/java/com/skyworth/faceid/algorithm/: FaceEnrollmentManager.kt  FaceIDAlgorithmImpl.java  FaceIDAlgorithmImpl.kt  FrameProcessor.kt  IFaceIDAlgorithm.java  IFaceIDAlgorithm.kt
app/src/main/java/com/skyworth/faceid/camera/: CameraManager.java  CameraManager.kt  FaceIDCameraController.kt
app/src/main/res/layout/: activity_preview.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/android/car/evs/: CameraIds.java  (+5 more)
app/src/test/java/com/dvr/faceid/: FaceIDPreviewTestSuite.java
app/src/test/java/com/skyworth/faceid/: FaceIDPreviewTestSuite.java
docs/: EGL_渲染使用说明书.md  FRAMEWORK_INTEGRATION.md  FaceID_SO对接说明.md  FaceID_渲染模块说明书.md  STANDARDS.md  分辨率扫描报告.md  设计方案.md
proposals/: FACEP-001-保留最后一帧buffer防黑屏方案.md  FACEP-001-算法线程读取HardwareBuffer防黑屏.md  FACEP-002-绘制人脸关键点和密集点云.md  FACEP-003-动态ROI裁剪传递算法.md  FACEP-004-分辨率扫描emb可信度分析.md
(+16 files in other folders)
